--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="password.hint">Password</string>
     <string name="login">Login</string>
     <string name="create.account">No account yet? Create one</string>
+    <string name="facebook_app_id">524433627974443</string>
+    <string name="fb_login_protocol_scheme">fb524433627974443</string>
+
 </resources>
