--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="menu_item_home">Noticias</string>
     <string name="menu_item_settings">Configuraciones</string>
     <string name="action_click_me">TEST</string>
-
+    <string name="open">open</string>
+    <string name="close">close</string>
 
 </resources>
